# Kinematic-Wave

./: .gitignore  CMakeLists.txt  README
implementations/: 1d.cpp  2d.cpp  CMakeLists.txt
include/: controller.hpp  drain_direction_map.hpp  node.hpp  stepper.hpp  stepper_type.hpp  upwind.hpp  utils.hpp  view.hpp
source/: CMakeLists.txt  controller.cpp  drain_direction_map.cpp  node.cpp  stepper.cpp  upwind.cpp  view.cpp
tests/: CMakeLists.txt  test_drain_direction_map.cpp  test_utils.cpp
